utsavch189: update smtp and fix overflow in exam ui

--- a/static/styles/exam.css
+++ b/static/styles/exam.css
@@ -157,9 +157,11 @@ span {
    top: 50%;
    transform: translate(-50%, -50%);
    height: auto;
-   margin-top: 70px;
+   margin-top: 150px;
 }
-
+.sssss{
+   margin-top: 60px;
+}
 .col1 {
    height: 25px;
    width: 25px;
